--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Name - Portfolio</title>
-    <!-- Add CSS file -->
+    <title>Hay Elmaliah - Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is my personal GitHub Page.</p>
-    <!-- Add more content as needed -->
+    <div class="container">
+        <h1>Hay Elmaliah</h1>
+    </div>
 </body>
 </html>
