--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <div class="container">
         <h1>Hay Elmaliah</h1>
         <p>Welcome to my portfolio. Here are some of my GitHub projects:</p>
-        <ul class="repo-list">
-            <li><a href="https://github.com/HayElmaliah/Intro-to-data-processing-CS236201" target="_blank">Intro to Data Processing (CS236201)</a></li>
-            <li><a href="https://github.com/HayElmaliah/On-Multi-Agent-Systems-CS236604" target="_blank">On Multi-Agent Systems (CS236604)</a></li>
-            <li><a href="https://github.com/HayElmaliah/Submodular-Optimization-Algorithms-CS236621" target="_blank">Submodular Optimization Algorithms (CS236621)</a></li>
-            <li><a href="https://github.com/HayElmaliah/Deep-Learning-CS236781" target="_blank">Deep Learning (CS236781)</a></li>
-            <li><a href="https://github.com/HayElmaliah/Deep-Learning-CS236781-MiniProject" target="_blank">Deep Learning Mini-Project (CS236781)</a></li>
-        </ul>
+        <div class="buttons">
+            <a href="https://github.com/HayElmaliah/Intro-to-data-processing-CS236201" target="_blank" class="btn">Intro to Data Processing</a>
+            <a href="https://github.com/HayElmaliah/On-Multi-Agent-Systems-CS236604" target="_blank" class="btn">On Multi-Agent Systems</a>
+            <a href="https://github.com/HayElmaliah/Submodular-Optimization-Algorithms-CS236621" target="_blank" class="btn">Submodular Optimization Algorithms</a>
+            <a href="https://github.com/HayElmaliah/Deep-Learning-CS236781" target="_blank" class="btn">Deep Learning</a>
+            <a href="https://github.com/HayElmaliah/Deep-Learning-CS236781-MiniProject" target="_blank" class="btn">Deep Learning Mini-Project</a>
+        </div>
     </div>
 </body>
 </html>
