--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hay Elmaliah - Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-    <div class="container">
-        <h1>Hay Elmaliah</h1>
-        <p>Welcome to my portfolio. Here are some of my GitHub projects:</p>
-        <div class="buttons">
-            <a href="https://github.com/HayElmaliah/Intro-to-data-processing-CS236201" target="_blank" class="btn">Intro to Data Processing</a>
-            <a href="https://github.com/HayElmaliah/On-Multi-Agent-Systems-CS236604" target="_blank" class="btn">On Multi-Agent Systems</a>
-            <a href="https://github.com/HayElmaliah/Submodular-Optimization-Algorithms-CS236621" target="_blank" class="btn">Submodular Optimization Algorithms</a>
-            <a href="https://github.com/HayElmaliah/Deep-Learning-CS236781" target="_blank" class="btn">Deep Learning</a>
-            <a href="https://github.com/HayElmaliah/Deep-Learning-CS236781-MiniProject" target="_blank" class="btn">Deep Learning Mini-Project</a>
-        </div>
-    </div>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
